--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "vue": "^3.2.37",
+    "vue-observe-visibility": "^1.0.0",
     "vue-router": "^4.1.2",
     "vuex": "^4.0.2"
   },
