--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "axios-delay": "^1.0.0-rc6",
     "vue": "^3.2.37",
     "vue-observe-visibility": "^1.0.0",
     "vue-router": "^4.1.2",
