--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "axios-delay": "^1.0.0-rc6",
+    "swiper": "^8.4.2",
     "vue": "^3.2.37",
     "vue-observe-visibility": "^1.0.0",
     "vue-router": "^4.1.2",
